fixed: The global scrollbar style takes effect

--- a/client/styles/global.scss
+++ b/client/styles/global.scss
@@ -5,14 +5,14 @@
 }
 
 // The style of the global webpage slider
-::-webkit-scrollbar {
+*::-webkit-scrollbar {
     width: 6px;
     background-color: white;
 }
-::-webkit-scrollbar-thumb {
+*::-webkit-scrollbar-thumb {
     background-color: #eee;
     border-radius: 3px;
 }
-::-webkit-scrollbar-thumb:hover {
+*::-webkit-scrollbar-thumb:hover {
     background-color: #ccc;
 }
